<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <!--
    app:startDestination="@+id/nav_home">
    -->
    <!-- Add another fragment for feed -->
    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.apphome.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.apphome.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.apphome.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.apphome.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.apphome.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login"/>

</navigation>